--- a/lib/components/html/info_popup_component.html
+++ b/lib/components/html/info_popup_component.html
@@ -1,9 +1,9 @@
-<div role="presentation" *ngIf="foIsOpen" class="background-overlay">
+<div role="presentation" *ngIf="isOpen" class="background-overlay">
     <div class="aligner">
         <div [style.min-width]="titleWidth" class="popup">
-            <h2>{{title}}<fo-icon foSrc="close" foTitle="Close" (click)="close()"></fo-icon></h2>
+            <h2>{{title}}<fo-icon foSrc="close" foTitle="Close" (click)="onCancel()"></fo-icon></h2>
             <p>{{text}}</p>
-            <p class="text-right">
+            <p *ngIf="isConfirm" class="text-right">
                 <button (click)="onOk()">Ok</button>
                 <button (click)="onCancel()">Cancel</button>
             </p>
