--- a/lib/components/style/info_popup_component.scss
+++ b/lib/components/style/info_popup_component.scss
@@ -32,6 +32,7 @@ div.background-overlay
         background-color: $color-2;
         margin: 0;
         padding: 0.5em 1.5rem;
+        font-size: 1.5rem;
       }
       p
       {
@@ -39,6 +40,7 @@ div.background-overlay
         background-color: white;
         margin: 0;
         padding: 1em 1.5rem;
+        font-size: 1rem;
       }
 
       fo-icon
