--- a/lib/components/style/_constants.scss
+++ b/lib/components/style/_constants.scss
@@ -1,7 +1,11 @@
 $color-1: #333;
 $color-2: #01a79d;
 $color-3: #692;
-$color-alert: red;
+$color-alert: #ff5555;
+$color-alert-bright: #cc9999;
 $color-info: blue;
 $color-success: green;
 $color-text: #444;
+
+
+$default-margin-top: 1em;
