--- a/lib/components/html/app_component.html
+++ b/lib/components/html/app_component.html
@@ -3,9 +3,9 @@
 <h1 [style.color]="color" (click)="popup.open($event, 'TEXT CONTENT', 'TITLE CONTENT')">Click me</h1>
 <fo-info-popup #popup (userResponse)="parseResponse($event)" [foIsConfirm]="true"></fo-info-popup>
 
-<form>
-    <fo-input foLabel="Förnamn" foDescription="Fyll i användarens förnamn!" foValidationMessage="Fyll i ett giltigt namn"></fo-input>
-    <button type="submit">Submit</button>
+<form foForm>
+    <fo-input foType="text" foPattern="[a]" foLabel="Förnamn" foDescription="Fyll i användarens förnamn!" foValidationMessage="Fyll i ett giltigt namn"></fo-input>
+    <button type="submit" foSubmit (click)="printData($event)">Submit</button>
 </form>
 
 <fo-data-table [data]="table" #theTable></fo-data-table>
