--- a/lib/components/html/input_component.html
+++ b/lib/components/html/input_component.html
@@ -3,7 +3,7 @@
     <div id="input-container">
         <label *ngIf="foLabel != null" (click)="input.focus()">{{foLabel}}
             <span *ngIf="foDescription != null">
-                <fo-info-popup #popup></fo-info-popup>G
+                <fo-info-popup #popup></fo-info-popup>
                 <fo-icon foSrc="info" foTitle="Information" (click)="popup.open($event, foDescription, foLabel);"></fo-icon>
             </span>
         </label>
@@ -14,19 +14,12 @@
             [required]="isRequired"
             [placeholder]="foPlaceholder"
             [(ngModel)]="foValue"
+            [pattern]="foPattern"
             #input
         />
-            <!--
-            [pattern]="pattern"
-
-            max={{max}}
-            min="{{min}}"
-            (keyup)="validate($event)"
--->
-
     </div>
 
     <div *ngIf="foPostfix != null" id="postfix"><span>{{postfix}}</span></div>
 </div>
 
-<!--<p id="error-output" *ngIf="(!myName.valid)">{{foValidationMessage}}</p>-->
+<p id="error-output" *ngIf="(!input.validity.valid)">{{(foValidationMessage != null) ? foValidationMessage : input.validationMessage}}</p>
