--- a/lib/components/html/app_component.html
+++ b/lib/components/html/app_component.html
@@ -3,13 +3,12 @@
 <h1 [style.color]="color" (click)="popup.open($event, 'TEXT CONTENT', 'TITLE CONTENT')">Click me</h1>
 <fo-info-popup #popup (userResponse)="parseResponse($event)" [foIsConfirm]="true"></fo-info-popup>
 
-<form foForm>
-    <fo-input foType="text" foPattern="[a]" foLabel="Förnamn" foDescription="Fyll i användarens förnamn!" foValidationMessage="Fyll i ett giltigt namn"></fo-input>
-    <button type="submit" foSubmit (click)="printData($event)">Submit</button>
-</form>
 
 <fo-data-table [data]="table" #theTable></fo-data-table>
 
 <p>{{theTable.selectedRow}}</p>
 
 
+<fo-form>
+    <fo-input foType="text" foLabel="cyka"></fo-input>
+</fo-form>
