--- a/lib/components/html/icon_component.html
+++ b/lib/components/html/icon_component.html
@@ -1,5 +1,5 @@
-<div role="presentation" title="{{foTitle}}" [attr.aria-label]="foTitle">
+<div role="presentation" title="{{title}}" [attr.aria-label]="title">
     <svg>
-        <use foSourced foSrc="{{foSrc}}"></use>
+        <use sourced src="{{src}}"></use>
     </svg>
 </div>
