--- a/lib/components/html/input_component.html
+++ b/lib/components/html/input_component.html
@@ -1,24 +1,24 @@
 <div id="container">
-    <div *ngIf="foPrefix != null" id="prefix"><span>{{prefix}}</span></div>
+    <div *ngIf="prefix != null" id="prefix"><span>{{prefix}}</span></div>
     <div id="input-container">
-        <label *ngIf="foLabel != null" (click)="input.focus()">{{foLabel}}
-            <span *ngIf="foDescription != null">
+        <label *ngIf="label != null" (click)="input.focus()">{{label}}
+            <span *ngIf="description != null">
                 <fo-info-popup #popup></fo-info-popup>
                 <fo-icon foSrc="info" foTitle="Information" (click)="popup.open($event, foDescription, foLabel);"></fo-icon>
             </span>
         </label>
         <input
-            [type]="foType"
-            [class]="foClass"
+            [type]="type"
+            [class]="className"
             [required]="isRequired"
-            [placeholder]="foPlaceholder"
-            [(ngModel)]="foValue"
-            [pattern]="foPattern"
+            [placeholder]="placeholder"
+            [(ngModel)]="value"
+            [pattern]="pattern"
             #input
         />
     </div>
 
-    <div *ngIf="foPostfix != null" id="postfix"><span>{{postfix}}</span></div>
+    <div *ngIf="postfix != null" id="postfix"><span>{{postfix}}</span></div>
 </div>
 
-<p id="error-output" *ngIf="(!input.validity.valid)">{{(foValidationMessage != null) ? foValidationMessage : input.validationMessage}}</p>
+<p id="error-output" *ngIf="(!input.validity.valid)">{{(validationMessage != null) ? validationMessage : input.validationMessage}}</p>
