--- a/lib/components/html/info_popup_component.html
+++ b/lib/components/html/info_popup_component.html
@@ -1,6 +1,6 @@
-<div role="presentation" *ngIf="isOpen" class="background-overlay">
+<div role="presentation" *ngIf="isOpen" class="background-overlay" [class.open]="isReallyOpen">
     <div class="aligner">
-        <div [style.min-width]="titleWidth" class="popup">
+        <div [style.min-width]="titleWidth" class="popup" [class.open]="isReallyOpen">
             <h2>{{title}}<fo-icon src="close" title="Close" (click)="onCancel()"></fo-icon></h2>
             <p>{{text}}</p>
             <p *ngIf="isConfirm" class="text-right">
