--- a/lib/components/data_table_component/data_table_component.scss
+++ b/lib/components/data_table_component/data_table_component.scss
@@ -1,5 +1,27 @@
 @import '../style/_constants';
 
+input[type=text]
+{
+  margin-bottom: 0.5rem;
+  padding: 0 1.7rem 0 0.2rem;
+  border: 2px solid #ccc;
+  border-radius: 0.3rem;
+  color: $color-text;
+}
+
+div.search-icon-container
+{
+  display: inline-block;
+  margin-left: -1.3rem;
+  -webkit-transform: translateY(0.17rem);
+  -moz-transform: translateY(0.17rem);
+  -ms-transform: translateY(0.17rem);
+  -o-transform: translateY(0.17rem);
+  transform: translateY(0.17rem);
+
+  color: #aaa;
+}
+
 fieldset
 {
   border: 0;
