--- a/lib/components/data_table_component/data_table_component.scss
+++ b/lib/components/data_table_component/data_table_component.scss
@@ -139,6 +139,14 @@ div#select-step
   }
 }
 
+@media screen and (min-width: 1024px)
+{
+  .hide-for-large
+  {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 639px)
 {
   .hide-for-small
