image-file-component

--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -1,4 +1,3 @@
 <div style="width:100%">
-    <fo-time-picker>
-    </fo-time-picker>
+    <fo-image-file [maxByteSize]="1000" src="http://placehold.it/350x350" (loaded)="onLoaded($event)"></fo-image-file>
 </div>
