image file component work

--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -1,3 +1,4 @@
-<div style="width:100%">
-    <fo-image-file [maxByteSize]="1000" src="http://placehold.it/350x350" (loaded)="onLoaded($event)"></fo-image-file>
+<div style="width:350px">
+    <fo-image-file [maxByteSize]="1000"></fo-image-file>
+    <p>{{source}}</p>
 </div>
