--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -1,4 +1,8 @@
 <div style="width:350px">
     <fo-image-file [maxByteSize]="1000"></fo-image-file>
-    <p>{{source}}</p>
+    <fo-image-file [maxByteSize]="1000"></fo-image-file>
+    <fo-image-file [maxByteSize]="1000"></fo-image-file>
+    <fo-image-file [maxByteSize]="1000"></fo-image-file>
+    <fo-image-file [maxByteSize]="1000"></fo-image-file>
+
 </div>
