--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -1,8 +1,10 @@
 <div style="width:350px">
     <fo-image-file [maxByteSize]="1000"></fo-image-file>
-    <fo-image-file [maxByteSize]="1000"></fo-image-file>
-    <fo-image-file [maxByteSize]="1000"></fo-image-file>
-    <fo-image-file [maxByteSize]="1000"></fo-image-file>
-    <fo-image-file [maxByteSize]="1000"></fo-image-file>
-
+</div>
+<div>
+    <fo-data-table
+        title="title"
+        [rows]="10"
+        [models]="mockModels">
+    </fo-data-table>
 </div>
