data-table updates 50%

--- a/lib/components/app_component.html
+++ b/lib/components/app_component.html
@@ -3,8 +3,8 @@
 </div>
 <div>
     <fo-data-table
-        title="title"
+        title="TITEL"
         [rows]="10"
-        [models]="mockModels">
+        [models]="models">
     </fo-data-table>
 </div>
