more table work

--- a/lib/components/data_table_component/data_table_component.html
+++ b/lib/components/data_table_component/data_table_component.html
@@ -1,4 +1,3 @@
-
 <h3 id="title">{{title}}</h3>
 <div id="search">
     <input type="text" maxlength="64" [(ngModel)]="searchPhrase" (keyup)="updateFilter()" />
@@ -23,14 +22,14 @@
         </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let model of filteredData | range:firstIndex:lastIndex" (click)="onRowClickController.add(model.id)">
+        <tr *ngFor="let key of filteredData.keys | range:firstIndex:lastIndex" (click)="onRowClickController.add(key)">
             <td
                     *ngFor="let cell of columns"
                     [class.hide-for-small]="smallHiddenColumns.contains(cell)"
                     [class.hide-for-medium]="mediumHiddenColumns.contains(cell)"
                     [class.hide-for-large]="largeHiddenColumns.contains(cell)"
-                    (click)="onCellClickController.add(model.toTableRow()[cell])">
-                {{model.toTableRow()[cell]}}
+                    (click)="onCellClickController.add(filteredData[key].toTableRow()[cell])">
+                {{filteredData[key].toTableRow()[cell]}}
             </td>
         </tr>
         </tbody>
